HHH-2860 - Consolidate Session creation options/parameters